--- a/LogServer/bin/main/application.properties
+++ b/LogServer/bin/main/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=LogServer
-server.port=8081
 
 spring.config.import=optional:file:.env.properties
 
@@ -8,6 +7,6 @@ spring.elasticsearch.uris=${ELASTICSEARCH_URL}
 spring.kafka.bootstrap-servers=${KAFKA_URL}
 spring.kafka.consumer.group-id=${KAFKA_GROUP_ID}
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 discord.webhook.url=${DISCORD_WEBHOOK_URL}
