--- a/logstash/conf.d/sudo-pipeline.conf
+++ b/logstash/conf.d/sudo-pipeline.conf
@@ -48,17 +48,11 @@ output {
     hosts => ["http://localhost:9200"]
     index => "parsed-sudo-logs"
   }
+  kafka {
+    bootstrap_servers => ["10.11.70.51:19092"] # Kafka 브로커 주소
+    topic_id => "parsed-sudo-logs"                     # 전송할 토픽 이름
+    codec => json                              # 이벤트를 JSON 형식으로 직렬화
+  }
 
   stdout { codec => rubydebug }
 }
-
-
-
-
-
-
-
-
-
-
-
