auditd, auditbeat 도입

--- a/logstash/conf.d/main-pipeline.conf
+++ b/logstash/conf.d/main-pipeline.conf
@@ -5,8 +5,13 @@ input {
 }
 
 filter {
+  if [agent][type] == "auditbeat" {
+    mutate {
+      add_tag => ["audit_log"]
+    }
+  }
   # Metricbeat 데이터를 metric-pipeline으로 전달
-  if [@metadata][beat] == "metricbeat" or [fields][type] == "metric" {
+  else if [@metadata][beat] == "metricbeat" or [fields][type] == "metric" {
     mutate { add_tag => ["metric"] }
   }
   # Filebeat 데이터를 file-pipeline으로 전달
@@ -17,13 +22,18 @@ filter {
 
 
 output {
+  if "audit_log" in [tags] {
+    pipeline { send_to => "audit-sudo-pipeline" }
+    pipeline { send_to => "audit-login-pipeline" }
+  }
   if "metric" in [tags] {
     pipeline { send_to => "metric-pipeline" }
   }
   else if "file" in [tags] {
     pipeline { send_to => "file-pipeline" }
-  }
+  }#else if [agent][type] == "auditbeat" {
+  #  pipeline { send_to => "audit-sudo-pipeline" }
+  #}
   # SUDO 관련 데이터만 sudo-pipeline으로 전송
   pipeline { send_to => "sudo-pipeline" }
 }
-
