--- a/LogServer/src/main/resources/application.properties
+++ b/LogServer/src/main/resources/application.properties
@@ -7,7 +7,8 @@ spring.elasticsearch.uris=${ELASTICSEARCH_URL}
 
 spring.kafka.bootstrap-servers=${KAFKA_URL}
 spring.kafka.consumer.group-id=${KAFKA_GROUP_ID}
+# ErrorHandlingDeserializer 설정
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 discord.webhook.url=${DISCORD_WEBHOOK_URL}
