update: send msg to kafka topic

--- a/LogServer/src/main/resources/application.properties
+++ b/LogServer/src/main/resources/application.properties
@@ -11,4 +11,8 @@ spring.kafka.consumer.group-id=${KAFKA_GROUP_ID}
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
-discord.webhook.url=${DISCORD_WEBHOOK_URL}
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.producer.topicname=${PRODUCER_TOPICNAME}
+spring.kafka.consumer.topicname=${CONSUMER_TOPICNAME}
