add: Dockerfile for running container

--- a/logLogin/app/src/main/resources/application.properties
+++ b/logLogin/app/src/main/resources/application.properties
@@ -3,12 +3,8 @@ server.port=8082
 
 spring.config.import=optional:file:.env.properties
 
-#spring.elasticsearch.uris=${ELASTICSEARCH_URL}
-
-spring.kafka.bootstrap-servers=localhost:19092
+spring.kafka.bootstrap-servers=********
 spring.kafka.consumer.group-id="loglogin"
 # ErrorHandlingDeserializer 설정
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-
-#discord.webhook.url=${DISCORD_WEBHOOK_URL}
