--- a/logLogin/app/src/main/resources/application.properties
+++ b/logLogin/app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 
 spring.config.import=optional:file:.env.properties
 
-spring.kafka.bootstrap-servers=********
+spring.kafka.bootstrap-servers=????????
 spring.kafka.consumer.group-id="loglogin"
 # ErrorHandlingDeserializer 설정
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
