update: conf files

--- a/logstash/conf.d/audit-login-pipeline.conf
+++ b/logstash/conf.d/audit-login-pipeline.conf
@@ -5,10 +5,7 @@ input {
 }
 
 filter {
-  if [auditd][message_type] != "user_login" and [auditd][message_type] != "user_end"{
-    drop{}
-  }
-  else if [auditd][message_type] == "user_login" and [auditd][result] == "fail"{
+  if [auditd][message_type] == "user_login" and [auditd][result] == "fail"{
     mutate {
       rename => {
         "[auditd][message_type]" => "status"
@@ -78,6 +75,36 @@ filter {
     }
 
   }
+  else if [auditd][message_type] == "user_start" and [auditd][summary][object][primary] == "ssh"{
+    mutate {
+      rename => {
+        "[auditd][message_type]" => "status"
+        "[user][name]" => "login_id"
+        "[host][name]" => "hostname"
+        "[source][ip]" => "source_ip"
+        "[auditd][summary][how]" => "method"
+        "[auditd][result]" => "result"
+        "[host][ip]" => "ip"
+        "[auditd][summary][object][primary]" => "check_vscode"
+      }
+
+    }
+
+    ruby {
+        code => "
+          if event.get('ip') && event.get('ip').is_a?(Array)
+            ips = event.get('ip').select { |ip| ip.start_with?('10.', '192.') }
+            event.set('ip', ips)
+          end
+        "
+    }
+    prune {
+      interpolate => true
+      whitelist_names => ["@timestamp", "hostname", "login_id", "source_ip", "method", "result", "ip", "check_vscode", "status"]
+        
+    }
+
+  }
   else if [auditd][message_type] == "user_end"{
     if [auditd][summary][how] != "/usr/bin/sudo" and [auditd][summary][how] != "/usr/sbin/sshd"{
       drop{}
@@ -110,6 +137,9 @@ filter {
     }
   
   }
+  else{
+    drop{}
+  }
 
   
 }
@@ -120,11 +150,13 @@ output {
     codec => rubydebug
   }
  
-  #kafka {
-  #  bootstrap_servers => ["10.11.70.51:19092"] # Kafka 브로커 주소
-  #  topic_id => "audit-sudo-pipeline"                     # 전송할 토픽 이름
-  #  codec => json                              # 이벤트를 JSON 형식으로 직렬화
-  #} 
+  if [status] == "user_start" {
+    kafka {
+      bootstrap_servers => ["10.11.70.51:19092"] # Kafka 브로커 주소
+      topic_id => "audit-login-pipeline"         # 전송할 토픽 이름
+      codec => json                              # 이벤트를 JSON 형식으로 직렬화
+    }
+  }
     
 
   # Elasticsearch로 전송
