--- a/logstash/conf.d/file-pipeline.conf
+++ b/logstash/conf.d/file-pipeline.conf
@@ -6,6 +6,9 @@ input {
 
 filter {
   # sudo 로그 식별 및 Grok 필터 적용
+  if [message] =~ /audit/ {
+    drop{}
+  }
   if [message] =~ /sudo:/ {
     grok {
       match => { "message" => "%{SYSLOGTIMESTAMP:timestamp} %{DATA:host} sudo: +%{DATA:user} : TTY=%{DATA:tty} ; PWD=%{DATA:pwd} ; USER=%{DATA:run_as_user} ; COMMAND=%{GREEDYDATA:command}" }
