--- a/logstash/conf.d/audit-login-pipeline.conf
+++ b/logstash/conf.d/audit-login-pipeline.conf
@@ -150,7 +150,7 @@ output {
     codec => rubydebug
   }
  
-  if [status] == "user_start" {
+  if [status] == "user_start" or [result] == "fail" {
     kafka {
       bootstrap_servers => ["10.11.70.51:19092"] # Kafka 브로커 주소
       topic_id => "audit-login-pipeline"         # 전송할 토픽 이름
