--- a/logLogin/app/src/main/resources/application.properties
+++ b/logLogin/app/src/main/resources/application.properties
@@ -3,8 +3,9 @@ server.port=8082
 
 spring.config.import=optional:file:.env.properties
 
-spring.kafka.bootstrap-servers=????????
+spring.kafka.bootstrap-servers=10.11.70.51:19092
 spring.kafka.consumer.group-id="loglogin"
+spring.kafka.listener.ack-mode=manual
 # ErrorHandlingDeserializer 설정
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
