--- a/config/auditbeat.yml
+++ b/config/auditbeat.yml
@@ -12,7 +12,7 @@ auditbeat.modules:
 
 - module: auditd
   # Load audit rules from separate files. Same format as audit.rules(7).
-  audit_rule_files: [ '${path.config}/audit.rules.d/*.conf' ]
+  audit_rule_files: [ '/etc/audit/audit.rules.d/*.conf' ]
   audit_rules: |
     ## Define audit rules here.
     ## Create file watches (-w) or syscall audits (-a or -A). Uncomment these
@@ -146,7 +146,7 @@ setup.kibana:
 # ---------------------------- Elasticsearch Output ----------------------------
 #output.elasticsearch:
   # Array of hosts to connect to.
-  #hosts: ["localhost:9200"]
+  # hosts: ["10.11.70.42:9200"]
 
   # Performance preset - one of "balanced", "throughput", "scale",
   # "latency", or "custom".
@@ -161,9 +161,9 @@ setup.kibana:
   #password: "changeme"
 
 # ------------------------------ Logstash Output -------------------------------
-output.logstash:
+#output.logstash:
   # The Logstash hosts
-  hosts: ["10.11.70.42:5044"]
+  #hosts: ["10.11.70.42:5044"]
 
   # Optional SSL. By default is off.
   # List of root certificates for HTTPS server verifications
@@ -174,6 +174,14 @@ output.logstash:
 
   # Client Certificate Key
   #ssl.key: "/etc/pki/client/cert.key"
+
+# ------------------------------ Kafka Output ----------------------------------
+output.kafka:
+  hosts: ["10.11.70.51:19092"]
+  topic: "auditbeat-log"
+  partition.round_robin:
+    reachable_only: false
+  required_acks: 1
 
 # ================================= Processors =================================
 
@@ -244,4 +252,5 @@ processors:
 
 # This allows to enable 6.7 migration aliases
 #migration.6_to_7.enabled: true
+
 
