update: add redis - audit-login-pipeline-kafka.conf

--- a/logstash/conf.d/audit-login-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-login-pipeline-kafka.conf
@@ -43,9 +43,9 @@ filter {
 
     # 실패 메시지 설정
     mutate {
-      add_field => { "message" => "
+      add_field => { "message" => "```
 🔞[FAILED] '%{login_id}' failed from %{source_ip} to %{hostname} ([%{ip}])
-" }
+```" }
     }
   }
 
@@ -136,13 +136,35 @@ filter {
       interpolate => true
       whitelist_names => ["@timestamp", "hostname", "login_id", "source_ip", "method", "result", "ip", "check_vscode", "status"]
     }
-    
-    # 성공 메시지 설정
     mutate {
-      add_field => { "message" => "
+      add_field => { "message" => "```
 ✅[SUCCESS] '%{login_id}' connected from %{source_ip} to %{hostname} ([%{ip}])
-" }
+```" }
     }
+
+    ruby {
+      code => "
+        require 'redis'
+
+        redis = Redis.new(host: '112.167.100.52', port: 16379)
+
+        key = event.get('message')
+        result = redis.setnx(key, 1)
+
+        if result == true
+          event.set('redis_value', 'True')
+          redis.expire(key, 1)
+        else
+          event.set('redis_value', 'False')
+        end
+      "
+    }
+
+    # redis_value가 'False'일 때 이벤트를 드롭
+    if [redis_value] == "False" {
+      drop {}
+    }
+
   }
 
   # 접속을 종료한 로그이면---------------------------------------------------------
@@ -201,13 +223,20 @@ output {
   # Discord Webhook으로 전송
   if [status] == "user_start" or [result] == "fail" {
     http {
-      url => ""
+      url => "https://discord.com/api/webhooks/1326039072724222047/fl_1PWhgRapOXsYvtKY9XHHKGImFSc-dU51rKF5n1D6i-7ZG5SPvhCLwPrzuvWw81CBA"
       http_method => "post"
       content_type => "application/json"
       format => "json"
       headers => ["Content-Type", "application/json"]
       mapping => ["content", "%{message}"]
     }
+    #redis{
+    #  host => "112.167.100.52"
+    #  port => 16379
+    #  data_type => "list"
+    #  key => "%{message}"
+    #  codec => line { format => "True" }
+    #}
   }
 
   # Elasticsearch로 전송
@@ -216,4 +245,3 @@ output {
     index => "auditbeat-login-logs-%{+YYYY.MM.dd}"
   }
 }
-
