update: add redis - audit-sudo-pipeline-kafka.conf

--- a/logstash/conf.d/audit-sudo-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-sudo-pipeline-kafka.conf
@@ -5,8 +5,6 @@ input {
 }
 
 filter {
-  
-  # 필요없는 데이터들은 모두 drop
   if [auditd][summary][actor][primary] == "unset" or [auditd][data][tty] == "(none)" or [process][title] in ["(pager)", "bash", "groups", "/bin/sh /usr/bin/lesspipe", "basename /usr/bin/lesspipe", "dirname /usr/bin/lesspipe", "dircolors -b", "clear"]{
     drop{}
   }
@@ -22,7 +20,6 @@ filter {
   else{
 
     mutate{
-    # 복잡한 필드 이름을 간단한 이름으로 변경
       rename => {
         "[host][ip]" => "ip"
         "[host][name]" => "hostname"
@@ -35,7 +32,7 @@ filter {
       }
     }
 
-		# ip 필드가 배열일 경우 (10.*, 192.*)만 필터링 -> 다른 불필요한 IP 주소는 제외하기 위해서
+
     ruby {
         code => "
           if event.get('ip') && event.get('ip').is_a?(Array)
@@ -44,17 +41,48 @@ filter {
           end
         "
     }
-    
-     # 지정된 필드만 유지하고 불필요한 필드는 모두 제거
     prune {
       interpolate => true
       whitelist_names => ["@timestamp", "hostname", "user", "tty", "pwd", "user-permission", "command", "ip", "ses"]
 
     }
-		
-		# Discord로 보낼 message 설정
+
+    if [command] =~ "sudo"{
+      mutate {
+        add_field => {"key" => "%{command} %{hostname}"}
+      }
+    }
+    else{
+      mutate {
+        add_field => {"key" => "sudo %{command} %{hostname}"}
+      }
+    }
+
+    ruby {
+      code => "
+        require 'redis'
+
+        redis = Redis.new(host: '112.167.100.52', port: 16379)
+
+        key = event.get('key')
+        result = redis.setnx(key, 1)
+
+        if result == true
+          event.set('redis_value', 'True')
+          redis.expire(key, 5)
+        else
+          event.set('redis_value', 'False')
+        end
+      "
+    }
+
+
+
+    if [redis_value] == "False" {
+      drop {}
+    }
     mutate {
-      add_field => { "message" => "
+      add_field => { "message" => "```
 📋 Command Log
 🕒 Timestamp       : %{@timestamp}
 👤 User            : (%{user}) (%{user-permission})
@@ -63,7 +91,7 @@ filter {
 📜 Command         : %{command}
 🖥️ TTY             : %{tty}
 🆔 Session ID      : %{ses}
-" }
+```" }
     }
   }
 
@@ -73,20 +101,21 @@ output {
   stdout {
     codec => rubydebug
   }
-  # Discord Webhook으로 전송
   http {
-      url => ""
+      url => "https://discord.com/api/webhooks/1316340893497823283/e0pVjhGR2obhN0IB_BwNIXqSbKc8Q_JQ0kONrA7VnL5kUAKkf8Z8Z-DbsO6OK2wEd3u-"
       http_method => "post"
       content_type => "application/json"
       format => "json"
       headers => ["Content-Type", "application/json"]
       mapping => ["content", "%{message}"]
     }
-
+  
   # 처리된 로그를 Elasticsearch에 저장
   elasticsearch {
     hosts => ["http://localhost:9200"]
     index => "auditbeat-sudo-logs-%{+YYYY.MM.dd}"
   }
 }
+
+
 
