delete: discord web hook

--- a/logstash/conf.d/audit-sudo-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-sudo-pipeline-kafka.conf
@@ -102,7 +102,7 @@ output {
     codec => rubydebug
   }
   http {
-      url => "https://discord.com/api/webhooks/1316340893497823283/e0pVjhGR2obhN0IB_BwNIXqSbKc8Q_JQ0kONrA7VnL5kUAKkf8Z8Z-DbsO6OK2wEd3u-"
+      url => ""
       http_method => "post"
       content_type => "application/json"
       format => "json"
