delete: discord webhook

--- a/logstash/conf.d/audit-login-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-login-pipeline-kafka.conf
@@ -223,7 +223,7 @@ output {
   # Discord Webhook으로 전송
   if [status] == "user_start" or [result] == "fail" {
     http {
-      url => "https://discord.com/api/webhooks/1326039072724222047/fl_1PWhgRapOXsYvtKY9XHHKGImFSc-dU51rKF5n1D6i-7ZG5SPvhCLwPrzuvWw81CBA"
+      url => ""
       http_method => "post"
       content_type => "application/json"
       format => "json"
