update: audit-login-pipeline-kafka.conf

--- a/logstash/conf.d/audit-login-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-login-pipeline-kafka.conf
@@ -146,7 +146,7 @@ filter {
       code => "
         require 'redis'
 
-        redis = Redis.new(host: '112.167.100.52', port: 16379)
+        redis = Redis.new(host: '', port: )
 
         key = event.get('message')
         result = redis.setnx(key, 1)
@@ -230,13 +230,6 @@ output {
       headers => ["Content-Type", "application/json"]
       mapping => ["content", "%{message}"]
     }
-    #redis{
-    #  host => "112.167.100.52"
-    #  port => 16379
-    #  data_type => "list"
-    #  key => "%{message}"
-    #  codec => line { format => "True" }
-    #}
   }
 
   # Elasticsearch로 전송
