update: audit-sudo-pipeline-kafka.conf

--- a/logstash/conf.d/audit-sudo-pipeline-kafka.conf
+++ b/logstash/conf.d/audit-sudo-pipeline-kafka.conf
@@ -62,7 +62,7 @@ filter {
       code => "
         require 'redis'
 
-        redis = Redis.new(host: '112.167.100.52', port: 16379)
+        redis = Redis.new(host: '', port: )
 
         key = event.get('key')
         result = redis.setnx(key, 1)
